subtoolbar overlap fix

--- a/src/Toolbar.less
+++ b/src/Toolbar.less
@@ -156,6 +156,8 @@
 
 		padding-left: 0;
 
+        z-index: 2;
+
 		> li > .leaflet-toolbar-icon {
 			position: relative;
 			float: left;
